ensure Finish runs in benchmakr
update README.md

fix benchmark being broken

make AlgorithmsDll reproducible

fix benchmark for real now

--- a/Algorithms/AlgorithmsDll.vcxproj
+++ b/Algorithms/AlgorithmsDll.vcxproj
@@ -265,6 +265,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalOptions>/PDBALTPATH:%_PDB% /Brepro %(AdditionalOptions)</AdditionalOptions>
       <!--<NoEntryPoint>true</NoEntryPoint>-->
     </Link>
   </ItemDefinitionGroup>
