--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "xxHash"]
 	path = xxHash
 	url = https://github.com/Cyan4973/xxHash.git
+[submodule "BLAKE3"]
+	path = BLAKE3
+	url = https://github.com/BLAKE3-team/BLAKE3.git
