--- a/Algorithms/AlgorithmsDll.vcxproj
+++ b/Algorithms/AlgorithmsDll.vcxproj
@@ -124,34 +124,34 @@
     <ClCompile Include="..\mbedtls\library\sha256.c" />
     <ClCompile Include="..\mbedtls\library\sha512.c" />
     <ClCompile Include="blake2sp.c" />
-    <ClCompile Include="blake3.c" />
-    <ClCompile Include="blake3_sse2.c">
+    <ClCompile Include="..\BLAKE3\c\blake3.c" />
+    <ClCompile Include="..\BLAKE3\c\blake3_sse2.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='sse2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
 	</ClCompile>
-    <ClCompile Include="blake3_sse41.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_sse41.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
 	</ClCompile>
-    <ClCompile Include="blake3_avx2.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_avx2.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
 	</ClCompile>
-    <ClCompile Include="blake3_avx512.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_avx512.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
 	</ClCompile>
     <ClCompile Include="blake3_dispatch.c" />
-    <ClCompile Include="blake3_neon.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_neon.c">
       <ExcludedFromBuild Condition="'$(Flavor)'!='neon'">true</ExcludedFromBuild>
 	</ClCompile>
-    <ClCompile Include="blake3_portable.c" />
+    <ClCompile Include="..\BLAKE3\c\blake3_portable.c" />
     <ClCompile Include="crc32.c" />
     <ClCompile Include="Hasher.cpp" />
     <ClCompile Include="sha3.c" />
@@ -160,33 +160,33 @@
   <ItemGroup>
     <ClInclude Include="..\xxHash\xxhash.h" />
     <ClInclude Include="blake2sp.h" />
-    <ClInclude Include="blake3.h" />
-    <ClInclude Include="blake3_impl.h" />
+    <ClInclude Include="..\BLAKE3\c\blake3.h" />
+    <ClInclude Include="..\BLAKE3\c\blake3_impl.h" />
     <ClInclude Include="crc32.h" />
     <ClInclude Include="Hasher.h" />
     <ClInclude Include="sha3.h" />
     <ClInclude Include="mbedtls_config.h" />
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="blake3_sse2_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_sse2_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='sse2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
 	</MASM>
-    <MASM Include="blake3_sse41_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_sse41_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
 	</MASM>
-    <MASM Include="blake3_avx2_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_avx2_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
 	</MASM>
-    <MASM Include="blake3_avx512_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_avx512_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
 	</MASM>
