--- a/Algorithms/AlgorithmsDll.vcxproj.filters
+++ b/Algorithms/AlgorithmsDll.vcxproj.filters
@@ -58,28 +58,28 @@
       <Filter>SHA3</Filter>
     </ClCompile>
     <ClCompile Include="Hasher.cpp" />
-    <ClCompile Include="blake3.c">
-      <Filter>Blake3</Filter>
-    </ClCompile>
-    <ClCompile Include="blake3_avx2.c">
-      <Filter>Blake3</Filter>
-    </ClCompile>
-    <ClCompile Include="blake3_avx512.c">
-      <Filter>Blake3</Filter>
-    </ClCompile>
     <ClCompile Include="blake3_dispatch.c">
       <Filter>Blake3</Filter>
     </ClCompile>
-    <ClCompile Include="blake3_neon.c">
+    <ClCompile Include="..\BLAKE3\c\blake3.c">
       <Filter>Blake3</Filter>
     </ClCompile>
-    <ClCompile Include="blake3_portable.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_avx2.c">
       <Filter>Blake3</Filter>
     </ClCompile>
-    <ClCompile Include="blake3_sse2.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_avx512.c">
       <Filter>Blake3</Filter>
     </ClCompile>
-    <ClCompile Include="blake3_sse41.c">
+    <ClCompile Include="..\BLAKE3\c\blake3_neon.c">
+      <Filter>Blake3</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BLAKE3\c\blake3_portable.c">
+      <Filter>Blake3</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BLAKE3\c\blake3_sse2.c">
+      <Filter>Blake3</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BLAKE3\c\blake3_sse41.c">
       <Filter>Blake3</Filter>
     </ClCompile>
   </ItemGroup>
@@ -100,24 +100,24 @@
       <Filter>SHA3</Filter>
     </ClInclude>
     <ClInclude Include="Hasher.h" />
-    <ClInclude Include="blake3.h">
+    <ClInclude Include="..\BLAKE3\c\blake3.h">
       <Filter>Blake3</Filter>
     </ClInclude>
-    <ClInclude Include="blake3_impl.h">
+    <ClInclude Include="..\BLAKE3\c\blake3_impl.h">
       <Filter>Blake3</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="blake3_avx2_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_avx2_x86-64_windows_msvc.asm">
       <Filter>Blake3</Filter>
     </MASM>
-    <MASM Include="blake3_avx512_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_avx512_x86-64_windows_msvc.asm">
       <Filter>Blake3</Filter>
     </MASM>
-    <MASM Include="blake3_sse2_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_sse2_x86-64_windows_msvc.asm">
       <Filter>Blake3</Filter>
     </MASM>
-    <MASM Include="blake3_sse41_x86-64_windows_msvc.asm">
+    <MASM Include="..\BLAKE3\c\blake3_sse41_x86-64_windows_msvc.asm">
       <Filter>Blake3</Filter>
     </MASM>
   </ItemGroup>
