--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,74 +43,69 @@ jobs:
     - name: Set up MSBuild
       uses: microsoft/setup-msbuild@v1
       
-    - name: Build Algorithms (ARM64 NEON)
+    - name: Install make
+      run: |
+        c:\msys64\usr\bin\bash -l -e -c "pacman -Sy make"
+      
+    - name: Build XKCP
       run: |
         cd ${{ github.workspace }}
+        cmd build-xkcp.bat
+      
+    - name: Build Algorithms (ARM64 NEON)
+      run: |
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=a64-neon
       
     - name: Build Algorithms (x86 SSE2)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-sse2
       
     - name: Build Algorithms (x86 AVX)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-avx
       
     - name: Build Algorithms (x86 AVX2)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-avx2
       
     - name: Build Algorithms (x86 AVX512)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-avx512
       
     - name: Build Algorithms (x64 SSE2)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x64-sse2
       
     - name: Build Algorithms (x64 AVX)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x64-avx
       
     - name: Build Algorithms (x64 AVX2)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x64-avx2
       
     - name: Build Algorithms (x64 AVX512)
       run: |
-        cd ${{ github.workspace }}
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x64-avx512
 
     - name: Build Solution (Win32)
       run: |
-        cd ${{ github.workspace }}
         msbuild "-property:Configuration=Release;Platform=x86;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
 
     - name: Build Solution (x64)
       run: |
-        cd ${{ github.workspace }}
         msbuild "-property:Configuration=Release;Platform=x64;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
 
     - name: Build Solution (ARM64)
       run: |
-        cd ${{ github.workspace }}
         msbuild "-property:Configuration=Release;Platform=ARM64;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
         
     - name: Build Installer
       run: |
-        cd ${{ github.workspace }}
         iscc .\installer.iss -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
         
     - name: Pack artifacts
       run: |
-        cd ${{ github.workspace }}
         7z a artifacts.7z .\bin\Release\
         
     - name: Upload setup
