add mctrl to build

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "XKCP"]
 	path = XKCP
 	url = https://github.com/XKCP/XKCP.git
+[submodule "mctrl"]
+	path = mctrl
+	url = https://github.com/mity/mctrl.git
