--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,11 @@ jobs:
         cd ${{ github.workspace }}
         cmd /C build-xkcp.bat
       
+    - name: Build mCtrl
+      run: |
+        cd ${{ github.workspace }}
+        cmd /C build-mctrl.bat
+      
     - name: Build Algorithms (ARM64 NEON)
       run: |
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=a64-neon
