--- a/OpenHashTab/OpenHashTab.vcxproj
+++ b/OpenHashTab/OpenHashTab.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="..\tiny-json\tiny-json.c">
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="base64.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="Exporter.cpp" />
     <ClCompile Include="FileHashTask.cpp" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\tiny-json\tiny-json.h" />
+    <ClInclude Include="base64.h" />
     <ClInclude Include="dllmain.h" />
     <ClInclude Include="Exporter.h" />
     <ClInclude Include="FileHashTask.h" />
