--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,9 +83,13 @@ jobs:
       run: |
         msbuild "-property:Configuration=Release;Platform=ARM64;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
         
-    - name: Build Installer
+    - name: Build Installer (User)
       run: |
         iscc .\installer.iss -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
+        
+    - name: Build Installer (System)
+      run: |
+        iscc .\installer.iss -DSYSTEM -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
         
     - name: Pack artifacts
       run: |
@@ -96,7 +100,8 @@ jobs:
       with:
         name: setup
         path: |
-          .\OpenHashTab_setup.exe
+          .\OpenHashTab_setup_user.exe
+          .\OpenHashTab_setup_system.exe
           
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
@@ -117,7 +122,7 @@ jobs:
         draft: false
         prerelease: true
 
-    - name: Upload release setup
+    - name: Upload release setup (User)
       if: ${{ steps.checktag.outputs.is_release == 'yes' }}
       id: upload-release-binary
       uses: actions/upload-release-asset@v1
@@ -125,8 +130,20 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: .\OpenHashTab_setup.exe
-        asset_name: OpenHashTab_setup.exe
+        asset_path: .\OpenHashTab_setup_user.exe
+        asset_name: OpenHashTab_setup_user.exe
+        asset_content_type: application/octet-stream
+
+    - name: Upload release setup (System)
+      if: ${{ steps.checktag.outputs.is_release == 'yes' }}
+      id: upload-release-binary
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: .\OpenHashTab_setup_system.exe
+        asset_name: OpenHashTab_setup_system.exe
         asset_content_type: application/octet-stream
         
     - name: Pack release symbols
