--- a/OpenHashTab/OpenHashTab.vcxproj.filters
+++ b/OpenHashTab/OpenHashTab.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="base64.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="virustotal_api.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="OpenHashTab.rc">
