--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -49,12 +49,12 @@ BEGIN
     PUSHBUTTON      "v",IDC_BUTTON_VT,184,150,16,16,BS_ICON | WS_DISABLED
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 465, 182
+IDD_SETTINGS DIALOGEX 0, 0, 465, 272
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "*"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,168,168
+    CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,168,258
     CONTROL         "IDS_DISPLAY_UPPERCASE",IDC_CHECK_DISPLAY_UPPERCASE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,6,275,11
     CONTROL         "IDS_LOOK_FOR_SUMFILES",IDC_CHECK_LOOK_FOR_SUMFILES,
@@ -72,13 +72,18 @@ BEGIN
     CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,90,275,11
     CONTROL         "IDS_SUMFILE_BANNER_DATE",IDC_CHECK_SUMFILE_BANNER_DATE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,102,263,11
-    PUSHBUTTON      "IDS_CHECK_FOR_UPDATES",IDC_BUTTON_CHECK_FOR_UPDATES,360,162,98,14
+    PUSHBUTTON      "IDS_CHECK_FOR_UPDATES",IDC_BUTTON_CHECK_FOR_UPDATES,360,252,98,14
     CONTROL         "IDS_CLIPBOARD_AUTOENABLE",IDC_CHECK_CLIPBOARD_AUTOENABLE,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,180,114,275,22
     CONTROL         "IDS_CLIPBOARD_AUTOENABLE_IF_NONE",IDC_CHECK_CLIPBOARD_AUTOENABLE_IF_NONE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,138,263,11
     CONTROL         "IDS_CLIPBOARD_AUTOENABLE_EXCLUSIVE",IDC_CHECK_CLIPBOARD_AUTOENABLE_EXCLUSIVE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,150,263,11
+    CONTROL         "IDS_CHECKAGAINST_STRICT",IDC_CHECK_CHECKAGAINST_STRICT,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,174,275,11
+    CONTROL         "IDS_HASH_SUMFILE_TOO",IDC_CHECK_HASH_SUMFILE_TOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,186,275,11
+    CONTROL         "IDS_CHECKAGAINST_AUTOFORMAT",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,163,275,11
 END
 
 
@@ -104,7 +109,7 @@ BEGIN
     IDD_SETTINGS, DIALOG
     BEGIN
         RIGHTMARGIN, 187
-        BOTTOMMARGIN, 178
+        BOTTOMMARGIN, 268
     END
 END
 #endif    // APSTUDIO_INVOKED
