option to calculate sumfile algorithm only (closes #55)

--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -84,6 +84,8 @@ BEGIN
     CONTROL         "IDS_HASH_SUMFILE_TOO",IDC_CHECK_HASH_SUMFILE_TOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,186,275,11
     CONTROL         "IDS_CHECKAGAINST_AUTOFORMAT",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,163,275,11
+    CONTROL         "IDS_SUMFILE_ALGORITHM_ONLY",IDC_CHECK_SUMFILE_ALGORITHM_ONLY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,198,275,11
 END
 
 
